--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,15 @@ h1, h2, h3, h4, h5, h6{
 .navbar li a:hover{
     color: var(--primary-color) !important;
 }
+
+.primary-btn{
+    background-color: var(--primary-color) !important;
+    border: none;
+    padding: 1.2rem 2rem;
+    width: 20rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+}
 /* Navbar css Ends */
 
 /* Main hero csss */
@@ -233,4 +242,17 @@ header{
     }
 }
 
-
+.header-right-side picture{
+    width: 80%;
+    min-width: 80%;
+    height: auto;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    object-position: center;
+}
+.hero-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
