--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5, h6{
     width: 20rem;
     font-size: 1.8rem;
     font-weight: bold;
+    border-radius: 12px;
 }
 /* Navbar css Ends */
 
@@ -194,6 +195,7 @@ header{
     background-color: var(--secondary-color);
     color: #fff;
     margin-top: 2rem;
+    border-radius: 12px;
 }
 
 
@@ -267,4 +269,79 @@ header{
     position: absolute;
     top: 0;
     bottom: 0;
+}
+
+
+/* Card for My recent work */
+.main-container {
+  position: relative;
+  width: 100%;
+  /* border-radius: 30px; */
+    height: auto;
+
+  
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  max-height: 50%;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+  overflow: hidden;
+}
+
+.main-container:hover .image{
+  opacity: 0;
+  transition: background-color 1s ease-out;
+  
+}
+.main-container:hover{
+    background-color: var(--bgcolor);
+    position: relative;
+    transition: background-color 1s ease-out;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+
+.main-container:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 1.4rem;
+  font-weight: 300;
+  padding: 1rem 3rem;
+  border: solid 1.3px var(--primary-color);
+  border-radius: 6px;
+}
+
+.text::after{
+    content: "»";
+    font-size: 2.25rem;
+    margin-left: 0.7rem;
+    top: 2px;
+    line-height: 0;
+}
+a:hover, a:active {
+  color: #fff;
 }
